# Projekt-2

./: Doxyfile
Projekt2/: CMakeLists.txt  Hearing_aid.cpp  Hearing_aid.h  battery.cpp  battery.h  electronic_device.cpp  electronic_device.h  main.cpp  parameters.cpp  parameters.h  phone.cpp  phone.h  smartphone.cpp  smartphone.h  user.cpp  user.h
build-Projekt2-Desktop_Qt_5_15_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  file.txt
html/: _hearing__aid_8cpp.html  _hearing__aid_8h.html  _hearing__aid_8h_source.html  annotated.html  battery_8cpp.html  battery_8h.html  battery_8h_source.html  class_battery-members.html  class_battery.html  class_electronic__device-members.html  class_electronic__device.html  class_hearing__aid-members.html  class_hearing__aid.html  class_parameter-members.html  class_parameter.html  class_phone-members.html  class_phone.html  class_smartphone-members.html  class_smartphone.html  class_user-members.html  class_user.html  classes.html  dir_07314e20658c394c123efbdc88cab9b7.html  electronic__device_8cpp.html  electronic__device_8h.html  electronic__device_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  main_8cpp.html  menudata.js  parameters_8cpp.html  parameters_8h.html  parameters_8h_source.html  (+9 more)
latex/: _hearing__aid_8cpp.tex  _hearing__aid_8h.tex  annotated.tex  battery_8cpp.tex  battery_8h.tex  class_battery.tex  class_electronic__device.eps  class_hearing__aid.eps  (+23 more)
(+57 files in other folders)
